# website-jackson

./: .gitignore  README.md  meta.yml  pyproject.toml
.github/workflows/: build.yml  gh-pages.yaml
content/: index.md
content/blog/: 2024-10-20 - Test entry.md  index.md
static/: style.css
templates/: base.html  hero.html
